--- a/SUAZI website task/index.html
+++ b/SUAZI website task/index.html
@@ -1,1 +1,60 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <div class="headtxt">
+            <h1>SUAZI</h1>
+            <p>The office is open from Monday to Friday, 6:00 a.m. to 3:00 p.m.</p>
+            <button>Call the office SUAZI</button>
+        </div>
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>About Suazi</li>
+                <li>Gallery</li>
+                <li>Contact</li>
+            </ul>
+        </nav>
+    </header>
+    <div class="shapes">
+        <div class="box1">
+            <img src="1.jpg">
+        </div>
+        <div class="box2">
+            <img src="2.webp">
+        </div>
+        <div class="box3">
+            <img src="3.jpg">
+        </div>
+        <div class="box4">
+            <img src="4.jpg">
+        </div>
+        <div class="circle"></div>
+    </div>
+    <div class="b2">
+    <div class="text">
+        <h1>SUAZI Architects<br> We create for you</h1>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.<br><br>
+        Lorem Ipsum has been the industry's standard dummy text ever since 
+        the 1500s, when an unknown printer took a galley of type and scrambled it to make 
+        a type specimen book. It has survived not only five centuries, but also the leap into.<br><br>
+        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer 
+        took a galley of type and scrambled.</p><br><br>
+        <button>Call Us</button>
+    </div>
+</div>
+</body>
+</html>
+<!-- SUAZI Architects We create for you
+Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into.
+Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled. -->
+
+
 
